src/objects/Ven_OppPipeline__c.object
<CustomObject>
    <fields>
        <fullName>Ven_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Cash__c</fullName>
        <formula>Ven_Opp__r.Ven_EffectiveYield__c * Ven_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_Opp__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Pipelines</relationshipLabel>
        <relationshipName>Opportunity_Pipelines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_YieldCash__c</fullName>
        <label>Yield Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Opportunity Pipeline</label>
    <nameField>
        <label>Opportunity Pipeline-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Pipelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>